--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@react-native-picker/picker": "2.11.0",
     "expo": "~53.0.11",
     "expo-asset": "~11.1.5",
